--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,9 @@
 
 @import "variables";
 @import "reset";
+@import "highlights";
+@import "svg-icons";
+@import "responsive";
 
 :root {
   --bg-primary: #{$white};
@@ -1853,8 +1856,5 @@ table {
   }
 }
 
-// Import syntax highlighting and responsive
-@import "highlights";
-@import "svg-icons";
-@import "responsive";
+// Imports moved to top of file
 
