--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
   {% include meta.html %}
   {% include mermaid.html %}
   {% include threejs.html %}
+  {% include highlight.html %}
 
 
   <!-- Google Fonts -->
